src/test/deca/codegen/invalid/stackoverflow_obj_decl2.deca
// Description:
//    Allocation récurive qui devrait fait un stackoverflow..
//
// Resultats:
//    ok
//    Erreur : La pile est pleine.
//

class A {
   A a = new A();
}

{
   A a;

   println("ok");
   a = new A();
}